Take into account more button after is visible

Only after we decided whether the more button is actually visible we can
use it for toolbar height calculation, otherwise it will never be
considered

BUG:464988